# cpp-template

./: CMakeLists.txt  Dockerfile  MODULE.bazel  README.md  conanfile.py
inc/: BUILD.bazel
src/: BUILD.bazel  main.cpp
